# pitcher-streamer

./: .gitignore  LICENSE  README.md  cli.py  config.yaml.example  connectors.py  main.py  oauth2.json.example  pyproject.toml  refresh_park_factors.py  rotation.py  scoring.py
.beads/: interactions.jsonl  metadata.json
.claude/skills/mlb-data-apis/: SKILL.md
.claude/skills/running-the-app/: SKILL.md
.claude/skills/season-rollover/: SKILL.md
templates/: index.html
tests/: conftest.py  test_app.py  test_game_score.py  test_roster.py  test_rotation.py  test_schedule.py  test_scoring.py
