[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pitcher-streamer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "yahoo-fantasy-api==2.12.3",
    "yahoo-oauth==2.1.1",
    "httpx==0.28.1",
    "pyyaml==6.0.3",
    "jinja2==3.1.6",
    "click==8.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-mock==3.15.1",
]

[project.scripts]
pitcher-streamer = "cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
py-modules = ["main", "connectors", "rotation", "scoring", "cli", "refresh_park_factors"]
